--- a/tree.ipynb
+++ b/tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,11 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exportar_arbol_como_imagen(raiz, filename=\"parseTree.png\"):\n",
+    "# def exportar_arbol_como_imagen(raiz, filename=\"parseTree.png\"):\n",
     "def exportar_arbol_como_imagen(raiz, filename=\"astTree.png\"):\n",
     "  DotExporter(raiz).to_picture(filename)\n",
     "  print(f\"Árbol guardado en {filename}\")"
@@ -95,26 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file = \"ast.csv\"\n",
+    "csv_file = \"astTree.csv\"\n",
     "# csv_file = \"parseTree.csv\"\n",
     "raiz = construir_arbol_desde_csv(csv_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Árbol guardado en ast.txt\n",
-      "Árbol guardado en arbol_parseo.png\n"
+      "Árbol guardado en astTree.txt\n",
+      "Árbol guardado en astTree.png\n"
      ]
     }
    ],
